<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UIControls1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_save">Save</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="check1">Check 1</string>
    <string name="check2">Check 2</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
